[package]
name = "csvaction"
version = "0.1.0"
edition = "2021"
authors = ["jianghaojie"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
encoding_rs = "0.8.34"
clap = { version = "4.5.9", features = ["derive"] }
indicatif = "0.17.8"
